# ai-invention-fea63a-the-uniformity-principle-how-within-sent

./: README.md
chat/: README.md
chat/messages/: README.md
chat/messages/3_report_results/: 3_gen_full_paper.md
chat/prompts/: README.md
chat/prompts/3_report_results/: 3_gen_full_paper.md
paper_latex/: paper.tex  references.bib
paper_latex/workspace/: .sdk_openhands_agent_struct_out.json  convert_pdf_to_png.py  paper.aux  paper.bbl  paper.blg  paper.out
round-1/dataset-1/: README.md
round-1/dataset-1/demo/: data_code_demo.ipynb  mini_demo_data.json
round-1/dataset-1/src/: .aii_cost_ledger.jsonl  .sdk_openhands_agent_struct_out.json  README.md  data.py  preview_data_out.json  process_datasets.py  pyproject.toml
round-1/research-1/: README.md
round-1/research-1/src/: .aii_cost_ledger.jsonl  .sdk_openhands_agent_struct_out.json  research_out.json  research_report.md
round-2/dataset-1/: README.md
round-2/dataset-1/demo/: data_code_demo.ipynb  mini_demo_data.json
round-2/experiment-1/: README.md
round-2/experiment-1/src/: .sdk_openhands_agent_struct_out.json  README_RESULTS.md  method.py  method_minimal.py  method_out_100.json  method_out_50.json  method_out_6.json  mini_data_out.json  mini_method_out.json  preview_method_out.json  pyproject.toml  test_method.py
round-2/experiment-2/: README.md
round-2/experiment-2/src/: .sdk_openhands_agent_struct_out.json  RESULTS_SUMMARY.md  create_mini_preview.py  medium_method_out.json  method.py  mini_method_out.json  preview_method_out.json  pyproject.toml  test_method_out.json
(+81 files in other folders)
