[project]
name = "readability-dataset-collection"
version = "1.0.0"
description = "Collect and standardize sentence-level readability datasets"
requires-python = ">=3.10"
dependencies = [
    "datasets==5.0.0",
    "loguru==0.7.3",
    "numpy==2.5.1",
    "pandas==3.0.3",
    "huggingface-hub==1.24.0",
    "requests==2.34.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
